# os-rust

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
src/: allocator.rs  gdt.rs  interrupts.rs  main.rs  memory.rs  vga_buffer.rs
src/allocator/: fixed_size_block.rs  linked_list.rs
