[package]
name = "os-rust"
version = "0.1.0"
authors = ["Lîm Tsú-thuàn <dannypsnl@gmail.com>"]
edition = "2018"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
test-timeout = 300          # (in seconds)

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"]}
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.12.1"
uart_16550 = "0.2.0"
pic8259_simple = "0.2.0"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.8.0"
[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.release]
panic = "abort"
